--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -52,6 +52,10 @@ body {
     justify-content: space-between;
 }
 
+.login-button {
+    display: flex;
+    align-items: center;
+}
 .login-button button {
     border: none;
     background-color: #6c63ff;
@@ -87,64 +91,65 @@ body {
     justify-content: space-between;
     padding: 1rem 0;
 }
- .input-box {
+
+.input-box {
     display: flex;
     flex-direction: column;
     margin-bottom: 1.1rem;
- }
+}
 
- .input-box input {
+.input-box input {
     margin: 0.6rem 0;
     padding: 0.8rem 1.2rem;
     border: none;
     border-radius: 10px;
     box-shadow: 1px 1px 6px #0000001c;
- }
+}
 
- .input-box input:hover {
+.input-box input:hover {
     background-color: #eeeeee75;
- }
+}
 
- .input-box inputL:focus-visible {
+.input-box input:focus-visible {
     outline: 1px solid #6c63ff;
- }
+}
 
- .input-box label,
- .gender-title h6 {
+.input-box label,
+.gender-title h6 {
     font-size: 0.75rem;
     font-weight: 600;
     color: #000000c0;
- }
+}
 
- .input-box input::placeholder {
+.input-box input::placeholder {
     color: #000000be
- }
+}
 
- .gender-group {
+.gender-group {
     display: flex;
     justify-content: space-between;
     margin-top: 0.62rem;
     padding: 0 0.5rem;
- }
+}
 
- .gender-input {
+.gender-input {
     display: flex;
     align-items: center;
 
- }
+}
 
- .gender-input input {
+.gender-input input {
     margin-right: 0.35rem;
 
- }
+}
 
- .gender-input label {
+.gender-input label {
     font-size: 0.81rem;
     font-weight: 600;
     color: #000000c0;
- }
+}
  
- .continue-button button {
+.continue-button button {
     width: 100%;
     margin-top: 2.5rem;
     border: none;
@@ -152,20 +157,20 @@ body {
     padding: 0.62rem;
     border-radius: 5px;
     cursor: pointer;
- }
+}
 
  .continue-button button:hover {
     background-color: #6b63fff1;
- }
+}
 
- .continue-button button a {
+.continue-button button a {
     text-decoration: none;
     font-size: 0.93rem;
     font-weight: 500;
     color: #fff;
- }
+}
 
- @media screen and (max-width: 1330px) {
+@media screen and (max-width: 1330px) {
     .form-image {
         display: none;
     }
@@ -175,9 +180,9 @@ body {
     .form {
         width: 100%;
     }
- }
+}
  
- @media screen and (max-width: 1064px) {
+@media screen and (max-width: 1064px) {
     .container {
         width: 90%;
         height: auto;
@@ -199,4 +204,4 @@ body {
         margin-top: 0.5rem;
     }
 
- }
+}
